--- a/template/vid.html
+++ b/template/vid.html
@@ -171,6 +171,7 @@ body {
         <p class="w3-large">Live camera feed with age and gender detection</p>
         <div class="video-container">
             <img id="video-feed" src="{{ url_for('video_feed') }}" alt="Video Feed" width="70%">
+            <script src="{{ url_for('static', filename='main.js') }}"></script>
         </div>
     </div>
 
